<resources>
    <string name="app_name">FirebaseRealtimeDB</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="input_nama_disini">Input Nama Disini</string>
    <string name="data_mahasiswa">Data Mahasiswa</string>
    <string name="input_nim_disini">Input NIM disini</string>
    <string name="nim">NIM</string>
    <string name="nama">Nama</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>
